--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;       
     width: 350px;
-    height: 500px;
+    height: 550px;
     background-color: #bb1233;
     padding: 2%;
 }
@@ -23,7 +23,7 @@
   justify-content: flex-end;
   align-items: center;  
   width: 95%;
-  height: 80px;
+  height: 150px;
   background-color: #2d2829;
   color: white; 
   font-size: 2rem;
@@ -105,7 +105,7 @@
   border-radius: 30px;
 }
 
-.operators button{
+.operators-div button{
   background-color: #3db5e5;
 }
 
