--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+ 
 .container {
     display: flex;       
     width: 350px;
@@ -30,6 +31,7 @@
   border-radius: 50px; 
   padding-right: 2%;
   margin-bottom: 2%;
+  overflow: hidden;
 }
 
 .button-div {
@@ -39,11 +41,11 @@
   width: 95%;
 }
 
-.left-div {
+.number-special-div {
   margin-right: 2%;
 }
 
-.right-div {
+.operator-div {
   padding-left: 1.5%;
 }
 
@@ -89,7 +91,16 @@
   font-size: 2rem;
   color: white;
   margin: 0.4rem 0;
-  border-bottom: 1px solid black;
+  border-bottom: 3px solid black;
+ }
+
+ button:active {
+   transform: translateY(8px);
+
+ }
+
+ button:hover {
+   opacity: 0.8;
  }
 
  .specials button{
@@ -100,7 +111,18 @@
   background-color: #113c78;
 }
 
+/*makes the zero button wider than the other buttons*/
 [class="0"] {
+  width: 170px;
+  border-radius: 30px;
+}
+
+/*centers the multiplication sign*/
+[class="*"] {
+  padding-top: 25%;
+}
+
+[class="AC"] {
   width: 170px;
   border-radius: 30px;
 }
